bug fixes and investigation

--- a/todo.txt
+++ b/todo.txt
@@ -3,12 +3,13 @@ version 1:
   features:
 
   fixes:
-    robot interacting with a chest should show robot inventory
-    robot interacting with empty space should remove block from display
+    robot interacting with a chest should show robot inventory (should be fixed)
+    robot inspecting empty space should remove block from display
+      what does geolyzer.analyze return for air blocks?
     robot failing to place one block should not prevent it from placing others
+      not sure why this is happening right now
+    grid not being updated after crafting to remove materials from grid (should be fixed)
     robot install fails to default to github
-    grid not being updated after crafting to remove materials from grid
-    clickable commands need a clickable cursor on hover
     make robot install use pastebin
 
   pre-release:
