--- a/public/lua/oc/install.txt
+++ b/public/lua/oc/install.txt
@@ -1,3 +1,3 @@
 mkdir /home/lib;
-wget https://raw.githubusercontent.com/dunstad/roboserver/master/public/lua/oc/setup.lua /home/lib/setup.lua;
+wget https://raw.githubusercontent.com/dunstad/roboserver/1.0.0/public/lua/oc/setup.lua /home/lib/setup.lua;
 lua /home/lib/setup.lua;
